# SSFA

./: .gitignore  README.md  example.py  example_choosing_lag.py  example_choosing_parameters.py  example_choosing_parameters_incremental.py  example_cva case_study.py  example_cva_case_study.py  example_cva_case_study_incremental.py  example_cva_fdr.py  example_cva_fdr_incremental.py  example_cva_plot_vars.py  example_dow.py  example_fdr cva.py  example_fdr.py  example_fdr_incremental.py  example_idv9_comment.py  example_matrix_sparsity.py  example_matrix_sparsity_incremental.py  example_matrix_sparsity_regularization.py  example_normalization instability.py  example_paper_comparison.py  example_proc.py  example_runtimes.py  example_tep case_study.py  example_tep.py  example_tep_case_study incremental.py  example_tep_case_study.py  requirements.txt  setup.cfg  ssfa.py  subgradient_method.py
src/sfamanopt/: fault_diagnosis.py  incmssfa.py  load_cva.py  mssfa.py  paper_ssfa.py  proximal.py  retraction.py  sfa.py  ssfa.py
