[metadata]
name = sfamanopt
version = 0.0.1
author = Hussein Saafan
author_email = hsaafan@uwaterloo.ca
description = Sparse slow feature analysis using manifold optimization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hsaafan/SSFA
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy
    matplotlib
    tepimport

[options.packages.find]
where = src
